Bug 159096 - Comment indicator in Calc should be less glossy
Summary: Comment indicator in Calc should be less glossy
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Calc-UX
  Show dependency treegraph
 
Reported: 2024-01-10 07:39 UTC by Telesto
Modified: 2024-01-26 11:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison (3.66 KB, image/jpeg)
2024-01-10 15:54 UTC, Telesto
Details
Light Gold 1 (28.63 KB, image/png)
2024-01-11 09:47 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-01-10 07:39:39 UTC
Description:
Comment indicator in Calc should be red, not magenta

Steps to Reproduce:
1. Open Calc
2. Insert a comment
3. Close the comment box

Actual Results:
Magenta

Expected Results:
Red

A) I'm unable to find the rationale behind the change, if this being a design decision on purpose

B) Some arguments against
* It's changing a long established default in LO
* It doesn't match competition
* Is inconsistent: red is used the accentuate something. Like 
- the red squiggly lines under misspelled words. 
- The red arrow indicator if text frame containing more (hidden) text because smaller frame size (Frame with AutoSize turned off)
A comment act the same way, but needs a different color?
* The contrast of purple against white is less. Red pops out. The current color doesn't (more eye strain finding comments)
* Color tends appears to shift visually (yellow cell background + comment indicator at zoom 65% appears more reddish to me)
* It doesn't really match with various cell background colors (in my opinion)
* The magenta color rendering more affected by variation from display to display. Hue, brightness, contrast. 


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40617d867346956588ac023511f31210107217f4
CPU threads: 8; OS: macOS 13.6.3; UI render: default; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Mike Kaganski 2024-01-10 08:00:36 UTC
(In reply to Telesto from comment #0)
> * Is inconsistent: red is used the accentuate something. Like 
> - the red squiggly lines under misspelled words. 
> - The red arrow indicator if text frame containing more (hidden) text

While I myself dislike the current choice (just because of increased size), the "it should be red" claim, especially based on the quoted text, looks simply wrong. The red is used exactly to bring attention to *mistakes*, not "accentuate something". Spelling error is red, but grammar errors are blue. Text not fitting their doxes is most likely an error (the content is there, but won't be able to print / export without a resize). But the comment is not a bug; it is *designed* to be shown / hidden by hovering, or by explicit "show permanently" command. It should be just a *there is something* marker, not "there is a problem".
Comment 2 Heiko Tietze 2024-01-10 08:18:37 UTC
The color was decided in bug 154080 comment 11. 

-1 from my side to use red, additionally to what Mike said the indicator should be distinguish from the overflow.
Comment 3 Telesto 2024-01-10 15:54:44 UTC
Created attachment 191848 [details]
Comparison

I'm going to back paddle on my initial request. The indicator should be distinguish from the overflow. And red isn't a de facto standard anymore, as it seems. Sorry..

I still not in favor of the current color variant, though. It's a bit to bright; or should I say "glossy". 

Ps. I also ask myself: should the border of the triangle be black after looking at the screenshot
Comment 4 Heiko Tietze 2024-01-10 16:01:51 UTC
The border (as well the color) depend on light/dark theme. Feel free to make a proposal.
Comment 5 LeroyG 2024-01-10 20:34:45 UTC
I think that it is good to have a contrasting border color, at least in two sides, especially for when there is an application background color.
Comment 6 Telesto 2024-01-10 21:21:38 UTC
(In reply to Heiko Tietze from comment #4)
> The border (as well the color) depend on light/dark theme. Feel free to make
> a proposal.

Regarding to the triangle line color. I observe the following

Light Mode (Tools -> Options -> Application colors -> Light)
A) Without background color: Triangle with black lines
B) With background color: Triangle with black lines

Dark-Mode (Tools -> Options -> Application colors -> Dark)
AA) Without background color: Triangle border: white line
BB) With background color: No triangle border: transparent; expected white line)

Case BB appears to be inconsistent compared to all other cases; no border. However it does look pretty nice, IMHO. Maybe case A & B should act as BB; transparent line 

---
Ps. no clue how the dark-color stuff functions. Is it simply the inverse of black? Or some complex logic? I don't really grasp why there is a difference between case AA and BB. I would have expected white line in both cases...
Comment 7 ady 2024-01-10 22:06:25 UTC
(In reply to Telesto from comment #6)

> Case BB appears to be inconsistent compared to all other cases; no border.
> However it does look pretty nice, IMHO. Maybe case A & B should act as BB;
> transparent line 

IMO that is not a good idea. When the cell's background color is similar to the color of the comment indicator, then users cannot detect/see that the indicator is there.

That situation was reported a few years ago, so the comment indicator received its own "border" by surrounding it with a contrasting colored "line". To be clear, the indicator's "border" should always contrast with the indicator's color. So you could have the indicator with its own border being white while the cell's background is also white; the indicator is visible against the cell's background color. If the indicator has a similar color as the cell's background, then the "border" around the indicator helps in showing it against that similar background.

If there is some combination in which the comment indicator has no contrasting "border", that would be a bug!


Regarding the main topic of this ticket... If the cell's background were to be red, the comment indicator would not be so easily seen. If the font of the cell were to be red (which is, after automatic, the default for the toolbar's icon), then the comment indicator would be interfering with the content, making it harder to read.

Having said that, I wouldn't care about the specific color of the comment indicator if it was smaller, instead of bigger since LO 7.6. If it was smaller, I wouldn't mind it being "glossy" (to use Telesto's term from comment 3). I guess that "glossy" might bother, but maybe it contrasts with either black or white font(?). Maybe there is some possible improvement for the indicator's color - not convinced that red would be better. I agree with Mike in comment 1 (including the opinion regarding the size).
Comment 8 Heiko Tietze 2024-01-11 09:47:38 UTC
Created attachment 191868 [details]
Light Gold 1

(In reply to Telesto from comment #6)
> (In reply to Heiko Tietze from comment #4)
> > The border (as well the color) depend on light/dark theme. Feel free to make
> > a proposal.
> 
> Light Mode (Tools -> Options -> Application colors -> Light)

Sorry, the border color is calculated against the cell background color so dark cell background would have a white border (with an updated threshold in the new version).

How about Light Gold 1 as default? (Consider that we are going to make the triangle smaller.)
Comment 9 ady 2024-01-11 10:50:38 UTC
(In reply to Heiko Tietze from comment #8)
> How about Light Gold 1 as default?

IMHO, generally speaking and between 2 specific colors to choose, the color that provides better contrast against the default font color would be preferable as background color, leaving the other color as indicator(s). I care much more about the content of the cell being clearly readable (whichever characteristic of the comment indicator would be discussed).

Other than that, color-blind users (which is not just one group, but at least three) might care about which specific color is selected, in contrast to cell's background, cell's border, and cell's content.
Comment 10 ady 2024-01-11 11:22:33 UTC
(In reply to ady from comment #9)

> IMHO, generally speaking and between 2 specific colors to choose, the color
> that provides better contrast against the default font color would be
> preferable as background color, leaving the other color as indicator(s). I
> care much more about the content of the cell being clearly readable
> (whichever characteristic of the comment indicator would be discussed).

I forgot to mention in the quoted paragraph that current typical colors (yellow for cell background, black for font, dark red 2 for alternative font, or their alternatives for Dark themes) should also be considered, as I mentioned in comment 7.
Comment 11 Eyal Rozenberg 2024-01-16 20:45:19 UTC
My 2 cents:

* Magenta seems completely arbitrary to me, it's like somebody spilled paint over my sheet. Where in my UI is magenta used at all? Nowhere I can remember. No, I don't like it.

* (Regarding light mode:) Red - it's true that it hints at some kind of error or problem. So I'm not dead-set on red. But - at least it's a color that has some "UI legitimacy" for me. If you want to replace red, find something else that's legit. You could consider, for example, the colors used in rendering the comment itself, e.g. some kind of yellow. Another possibility is, yes I'll say it, a black triangle, or a gray one. Now those are UI colors.

* Absolutely _no_ border around the triangle! Drop that right now! It's not helping, it's only distracting and confusing, as it clashes with the cell text (especially when the cell text intersects).

* Regarding dark mode... I'm not sure. With the sheet still being black-on-white even in dark mode, it's all mixed up.
Comment 12 ady 2024-01-17 04:37:57 UTC
(In reply to Eyal Rozenberg from comment #11)
> My 2 cents:
> 
> * Magenta seems completely arbitrary to me, it's like somebody spilled paint
> over my sheet. Where in my UI is magenta used at all? Nowhere I can
> remember. No, I don't like it.

We are trying to find some color for the comment indicator that does not distract, but that does not mix/blend with other artifacts either (font, cell border, background, grid lines, comments themselves, other lines such as tracing precedents or track changes or lines to other comments...).

> 
> * (Regarding light mode:) Red - it's true that it hints at some kind of
> error or problem. So I'm not dead-set on red. But - at least it's a color
> that has some "UI legitimacy" for me. If you want to replace red, find
> something else that's legit. You could consider, for example, the colors
> used in rendering the comment itself, e.g. some kind of yellow. Another
> possibility is, yes I'll say it, a black triangle, or a gray one. Now those
> are UI colors.

Some kind of red is also very usual for "negative", or "bad" or to "attention/beware" (in the western world at least), and that's why the old indicator was reddish (as the first default choice for applying font color, after "automatic"). I am not completely against it, but I assume Heiko changed it for some reason. Reminder: we are trying to keep the text/font clearly readable when the indicator is there.

Yellow has similar considerations as red. Background of comments, "neutral" (or "middle") typical styles for cell background. Again, the indicator should not distract but should not blend too much either.

About black for the indicator... How many times users have to complain about not being able to clearly read the content of the cell (typically with a black font).

> 
> * Absolutely _no_ border around the triangle! Drop that right now! It's not
> helping, it's only distracting and confusing, as it clashes with the cell
> text (especially when the cell text intersects).

Removing the indicators' border would not be a plus but a regression. It was added for several reasons, already discussed/explained multiple times.

> 
> * Regarding dark mode... I'm not sure. With the sheet still being
> black-on-white even in dark mode, it's all mixed up.


The election cannot be just "I like it", or "I'm used to it in other parts of my UI". Those might be relevant factors, but there is an objective target to achieve. "Show me so the user can (minimally) know that I'm here, but don't bother the user more than the minimally necessary".
Comment 13 Heiko Tietze 2024-01-26 07:50:24 UTC
We discussed the topic in the design meeting.

One idea was to invert the cell background color (or to diverge from the hard-coded color if too close to the cell background). The algorithm would be tricky but variable colors make the display busy.

So we decided to keep following the example of Excel but adjust the glossy magenta to the more suited "Light Magenta 3", which works well with both bright and dark cell backgrounds.
Comment 14 Heiko Tietze 2024-01-26 08:05:03 UTC
(In reply to Heiko Tietze from comment #13)
> "Light Magenta 3"
I think this was a mistake in minuting and should be "Light Purple 3".
Comment 15 Commit Notification 2024-01-26 10:11:52 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/381ab9a1a38e4ea9238599e62acd430782a80547

Resolves tdf#159096 - Change color of comment indicators in Calc

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.