Resolves tdf#159096 - Change color of comment indicators in Calc

COL_LIGHTMAGENT was preceived as too glossy and "Light Purple 3"
should also be closer to the Excel prototype

Change-Id: I451c0ba0628dbd3b1794e46de3ff1fef763a6f46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162593
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>